adding help hover bars and the help text

--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,25 @@ body {
   font-size: 25px;
 }
 
+.abs-box {
+  position: absolute;
+  color: black;
+  left: 148px;
+  top: 11px;
+  font-size: 15px;
+  text-align: left;
+  font-family: Calistoga, Arial;
+  color: black;
+  margin: 0;
+  line-height: 23.5px;
+}
+
+
 h1 {
   font-size: 40px;
-  margin: 20px;
+  margin: 0;
+  color: black;
+  margin-bottom: 3px;
 }
 
 h2 {
@@ -18,7 +34,49 @@ h2 {
   text-align: center;
   margin: 0;
   font-family: Calistoga, Arial;
+  color: black;
 }
+
+h3 {
+  font-size: 15px;
+  text-align: left;
+  font-family: Calistoga, Arial;
+  color: black;
+  margin: 0;
+}
+
+
+.nav-div {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  row-gap: 2px;
+  margin: 18px;
+  position: relative;
+}
+
+.first-box {
+  width: 129px;
+  height: 8px;
+  background-color: black;
+  border-radius: 5px;
+}
+
+
+.second-box {
+  display: flex;
+  flex-direction: row;
+}
+
+.small-box {
+  width: 41.66px;
+  margin-right: 2px;
+  height: 8px;
+  background-color: black;
+  border-radius: 5px;
+}
+
+
 
 svg {
   height: 23px;
